--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 <body>
 <header>
     <nav class="top-menu">
-        <a class="navbar-logo" href="index.html" style = "font-family: 'Arimo'; color: white; text-decoration: none;"><h3>Компания "Софос"</h3></a>
         <ul class="menu-main">
             <li><a href="index.html">Главная</a></li>
             <li><a href="">О компании</a></li>
@@ -21,10 +20,10 @@
 </nav>
     </header>
     <div class="img-container">
-        <img src = "images/export.jpg" />
+        <h1 style="color: white">Доставка монтажного оборудования</h1>
     </div>
     <div class = "quote">
-        <h1 style = "font-size: 50px">Мы - ваш гарант долгосрочного сотрудничества на самых выгодных условиях.</h1>
+        <h2 style = "font-size: 50px">Мы - ваш гарант долгосрочного сотрудничества на самых выгодных условиях.</h2>
     </div>
 </body>
 <script src = "script/jquery-3.2.1.min.js"></script>
